Fix header width on small/medium screens

--- a/assets/css/components/site.less
+++ b/assets/css/components/site.less
@@ -14,10 +14,14 @@
 }
 
 .site-header {
+  width: 100%;
+  max-width: 42rem;
+  margin: 0 auto;
   padding: 0 1rem;
 
   @media @break-lg {
     width: 12rem;
+    margin: 0;
     padding-right: 0;
   }
 
@@ -40,6 +44,7 @@
 }
 
 .site-content {
+  width: 100%;
   max-width: 42rem;
   margin: 0 auto;
   padding: 0 1rem;
